# GDSII-Parser

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: README.md  box.gds  box.txt  box_path_text.GDS  box_path_text.txt  empty.gds  empty.txt  polygon.GDS  polygon.txt  top_cell.gds  top_cell.txt  two_cell.gds  two_cell.txt
googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt  gdsii_common.hpp  gdsii_reader.cpp  gdsii_reader.hpp  main.cpp
tests/: CMakeLists.txt  main_test.cpp
